--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun  7 13:27:24 2018</p>
+         Last Run: Thu Jun  7 16:25:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 07, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>20</td>
+                        <td>17</td>
                         <td>2</td>
-                        <td>18</td>
+                        <td>11</td>
                         <td>SE</td>
-                        <td>40</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>23</td>
+                        <td>18</td>
                         <td>1</td>
-                        <td>19</td>
+                        <td>13</td>
                         <td>SE</td>
-                        <td>45</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>27</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>SSE</td>
-                        <td>39</td>
+                        <td>16</td>
+                        <td>SE</td>
+                        <td>46</td>
                      </tr>
                   </tbody>
                </table>
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "20",
-                 "23",
-                 "27"
+                 "17",
+                 "18",
+                 "22"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "40",
-                 "45",
-                 "39"
+                 "41",
+                 "50",
+                 "46"
                ]
              }
            ]
@@ -210,7 +210,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun  7 13:27:24 2018</p>
+         Last Run: Thu Jun  7 16:25:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 09, 2018 -  9:45AM til 12:15PM</H4>
                <table class="table table-striped">
@@ -231,63 +231,63 @@
                   <tbody>
                      <tr>
                         <td>09:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>1</td>
-                        <td>45</td>
-                        <td>2</td>
+                        <td>Mostly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>11</td>
+                        <td>45</td>
+                        <td>1</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>57</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>9</td>
+                        <td>42</td>
                         <td>2</td>
-                        <td>40</td>
-                        <td>3</td>
-                        <td>13</td>
-                        <td>SSE</td>
-                        <td>61</td>
+                        <td>10</td>
+                        <td>S</td>
+                        <td>72</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>8</td>
-                        <td>39</td>
+                        <td>19</td>
+                        <td>19</td>
+                        <td>6</td>
+                        <td>42</td>
                         <td>4</td>
-                        <td>10</td>
-                        <td>S</td>
-                        <td>70</td>
+                        <td>13</td>
+                        <td>SW</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>36</td>
-                        <td>37</td>
-                        <td>4</td>
-                        <td>10</td>
-                        <td>S</td>
-                        <td>75</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>30</td>
+                        <td>40</td>
+                        <td>5</td>
+                        <td>14</td>
+                        <td>WSW</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>41</td>
-                        <td>4</td>
-                        <td>10</td>
-                        <td>S</td>
-                        <td>75</td>
+                        <td>5</td>
+                        <td>11</td>
+                        <td>SW</td>
+                        <td>68</td>
                      </tr>
                   </tbody>
                </table>
@@ -333,10 +333,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "17",
+                 "18",
+                 "19",
+                 "19",
                  "20",
-                 "21",
-                 "21",
                  "21"
                ]
              },
@@ -346,10 +346,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "17",
+                 "18",
+                 "19",
+                 "19",
                  "20",
-                 "21",
-                 "21",
                  "21"
                ]
              }
@@ -403,11 +403,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "1",
-                 "2",
-                 "8",
-                 "36",
-                 "49"
+                 "11",
+                 "9",
+                 "6",
+                 "30",
+                 "48"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
+                 "42",
+                 "42",
                  "40",
-                 "39",
-                 "37",
                  "41"
                ]
              },
@@ -427,11 +427,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "57",
-                 "61",
-                 "70",
-                 "75",
-                 "75"
+                 "67",
+                 "72",
+                 "69",
+                 "73",
+                 "68"
                ]
              }
            ]
@@ -448,9 +448,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun  7 13:27:24 2018</p>
+         Last Run: Thu Jun  7 16:25:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - OAK 8</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 09, 2018 - 12:00PM til  1:30PM</H4>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jun 10, 2018 - 12:00PM til  1:30PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -469,51 +469,51 @@
                   <tbody>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>4</td>
-                        <td>36</td>
-                        <td>4</td>
-                        <td>14</td>
-                        <td>S</td>
-                        <td>56</td>
+                        <td>Rain</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>66</td>
+                        <td>74</td>
+                        <td>2</td>
+                        <td>18</td>
+                        <td>NW</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>32</td>
-                        <td>36</td>
-                        <td>5</td>
-                        <td>14</td>
-                        <td>S</td>
-                        <td>61</td>
+                        <td>Rain</td>
+                        <td>9</td>
+                        <td>9</td>
+                        <td>68</td>
+                        <td>72</td>
+                        <td>3</td>
+                        <td>18</td>
+                        <td>NW</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>50</td>
-                        <td>37</td>
-                        <td>5</td>
-                        <td>14</td>
-                        <td>S</td>
+                        <td>Rain</td>
+                        <td>9</td>
+                        <td>9</td>
                         <td>67</td>
+                        <td>76</td>
+                        <td>3</td>
+                        <td>16</td>
+                        <td>WNW</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>46</td>
-                        <td>42</td>
-                        <td>6</td>
-                        <td>13</td>
-                        <td>SSW</td>
-                        <td>56</td>
+                        <td>Rain</td>
+                        <td>10</td>
+                        <td>10</td>
+                        <td>63</td>
+                        <td>71</td>
+                        <td>3</td>
+                        <td>16</td>
+                        <td>NW</td>
+                        <td>100</td>
                      </tr>
                   </tbody>
                </table>
@@ -558,10 +558,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
-                 "22",
-                 "22",
-                 "21"
+                 "9",
+                 "9",
+                 "9",
+                 "10"
                ]
              },
              {
@@ -570,10 +570,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
-                 "22",
-                 "22",
-                 "21"
+                 "9",
+                 "9",
+                 "9",
+                 "10"
                ]
              }
            ]
@@ -625,10 +625,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "4",
-                 "32",
-                 "50",
-                 "46"
+                 "66",
+                 "68",
+                 "67",
+                 "63"
                ]
              },
              {
@@ -636,10 +636,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "36",
-                 "37",
-                 "42"
+                 "74",
+                 "72",
+                 "76",
+                 "71"
                ]
              },
              {
@@ -647,10 +647,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "61",
-                 "67",
-                 "56"
+                 "100",
+                 "100",
+                 "100",
+                 "100"
                ]
              }
            ]
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jun  7 13:27:24 2018</p>
+         Last Run: Thu Jun  7 16:25:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Sport Science/Psych - SWU Complex</H1>
                <H2 style="color:rgb(221,22,8)" class="text-center">CANCELED</H2>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jun 11, 2018 -  6:30PM til  8:30PM</H4>
@@ -690,36 +690,36 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>1</td>
-                        <td>30</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>0</td>
+                        <td>29</td>
                         <td>2</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>W</td>
-                        <td>67</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>0</td>
+                        <td>29</td>
                         <td>1</td>
-                        <td>30</td>
-                        <td>1</td>
-                        <td>19</td>
+                        <td>21</td>
                         <td>W</td>
-                        <td>60</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>1</td>
-                        <td>33</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>32</td>
+                        <td>0</td>
+                        <td>19</td>
                         <td>W</td>
                         <td>56</td>
                      </tr>
@@ -729,11 +729,11 @@
                         <td>13</td>
                         <td>13</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>18</td>
                         <td>W</td>
-                        <td>53</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
