--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jun 12 16:15:22 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - OAK 8</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jun 12, 2018 -  7:30PM til  9:00PM</H4>
+         Last Run: Wed Jun 13 11:11:49 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Fred Seymour / École Notre-Dame-de-la-Paix</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jun 14, 2018 -  6:30PM til  8:00PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -29,40 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>0</td>
-                        <td>21</td>
+                        <td>06:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>13</td>
+                        <td>13</td>
+                        <td>39</td>
+                        <td>60</td>
                         <td>1</td>
                         <td>18</td>
-                        <td>W</td>
-                        <td>47</td>
+                        <td>WNW</td>
+                        <td>78</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>32</td>
+                        <td>61</td>
+                        <td>1</td>
+                        <td>16</td>
+                        <td>NW</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>0</td>
-                        <td>24</td>
-                        <td>0</td>
+                        <td>Overcast</td>
                         <td>14</td>
-                        <td>WNW</td>
-                        <td>63</td>
-                     </tr>
-                     <tr>
-                        <td>09:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>0</td>
-                        <td>29</td>
+                        <td>14</td>
+                        <td>23</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>73</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -95,9 +95,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
+             "06:00 PM",
              "07:00 PM",
-             "08:00 PM",
-             "09:00 PM"
+             "08:00 PM"
            ],
            "datasets":[
              {
@@ -106,9 +106,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
-                 "19",
-                 "17"
+                 "13",
+                 "14",
+                 "14"
                ]
              },
              {
@@ -117,9 +117,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
-                 "19",
-                 "17"
+                 "13",
+                 "14",
+                 "14"
                ]
              }
            ]
@@ -160,9 +160,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
+             "06:00 PM",
              "07:00 PM",
-             "08:00 PM",
-             "09:00 PM"
+             "08:00 PM"
            ],
            "datasets":[
              {
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
-                 "0"
+                 "39",
+                 "32",
+                 "23"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "21",
-                 "24",
-                 "29"
+                 "60",
+                 "61",
+                 "60"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "47",
-                 "63",
-                 "73"
+                 "78",
+                 "80",
+                 "89"
                ]
              }
            ]
@@ -204,13 +204,12 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
-         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jun 12 16:15:22 2018</p>
+         Last Run: Wed Jun 13 11:11:49 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - OAK 8</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 - 12:00PM til  1:30PM</H4>
                <table class="table table-striped">
@@ -234,48 +233,48 @@
                         <td>Chance of Rain</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>64</td>
-                        <td>71</td>
-                        <td>4</td>
+                        <td>78</td>
+                        <td>73</td>
+                        <td>2</td>
                         <td>14</td>
                         <td>N</td>
-                        <td>80</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>40</td>
-                        <td>64</td>
-                        <td>5</td>
-                        <td>14</td>
+                        <td>Rain</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>79</td>
+                        <td>65</td>
+                        <td>4</td>
+                        <td>16</td>
                         <td>NNE</td>
-                        <td>51</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Thunderstorm</td>
-                        <td>14</td>
-                        <td>14</td>
-                        <td>68</td>
-                        <td>60</td>
-                        <td>7</td>
-                        <td>14</td>
+                        <td>Rain</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>89</td>
+                        <td>64</td>
+                        <td>3</td>
+                        <td>16</td>
                         <td>NNE</td>
-                        <td>75</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>88</td>
-                        <td>55</td>
-                        <td>6</td>
+                        <td>93</td>
+                        <td>60</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNE</td>
-                        <td>75</td>
+                        <td>100</td>
                      </tr>
                   </tbody>
                </table>
@@ -321,8 +320,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "13",
-                 "14",
-                 "14",
+                 "15",
+                 "15",
                  "15"
                ]
              },
@@ -333,8 +332,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "13",
-                 "14",
-                 "14",
+                 "15",
+                 "15",
                  "15"
                ]
              }
@@ -387,10 +386,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "64",
-                 "40",
-                 "68",
-                 "88"
+                 "78",
+                 "79",
+                 "89",
+                 "93"
                ]
              },
              {
@@ -398,10 +397,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "71",
+                 "73",
+                 "65",
                  "64",
-                 "60",
-                 "55"
+                 "60"
                ]
              },
              {
@@ -409,10 +408,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "51",
-                 "75",
-                 "75"
+                 "88",
+                 "100",
+                 "100",
+                 "100"
                ]
              }
            ]
@@ -429,7 +428,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Jun 12 16:15:22 2018</p>
+         Last Run: Wed Jun 13 11:11:49 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jun 16, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -450,63 +449,63 @@
                   <tbody>
                      <tr>
                         <td>05:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>55</td>
-                        <td>55</td>
-                        <td>3</td>
+                        <td>Rain</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>84</td>
+                        <td>58</td>
+                        <td>2</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>62</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Rain</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>70</td>
-                        <td>56</td>
-                        <td>2</td>
-                        <td>8</td>
+                        <td>83</td>
+                        <td>57</td>
+                        <td>1</td>
+                        <td>10</td>
                         <td>NNE</td>
-                        <td>75</td>
+                        <td>100</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Thunderstorm</td>
+                        <td>Chance of Rain</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>66</td>
-                        <td>55</td>
+                        <td>73</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>6</td>
-                        <td>N</td>
-                        <td>84</td>
+                        <td>8</td>
+                        <td>NNE</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Thunderstorm</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>65</td>
-                        <td>57</td>
+                        <td>Chance of Rain</td>
+                        <td>14</td>
+                        <td>14</td>
+                        <td>48</td>
+                        <td>62</td>
                         <td>0</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>N</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>18</td>
-                        <td>63</td>
+                        <td>21</td>
+                        <td>65</td>
                         <td>0</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>NNW</td>
-                        <td>76</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -552,10 +551,10 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
+                 "16",
                  "16",
                  "15",
-                 "15",
+                 "14",
                  "13"
                ]
              },
@@ -565,10 +564,10 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
+                 "16",
                  "16",
                  "15",
-                 "15",
+                 "14",
                  "13"
                ]
              }
@@ -622,11 +621,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "70",
-                 "66",
-                 "65",
-                 "18"
+                 "84",
+                 "83",
+                 "73",
+                 "48",
+                 "21"
                ]
              },
              {
@@ -634,11 +633,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "56",
-                 "55",
+                 "58",
                  "57",
-                 "63"
+                 "57",
+                 "62",
+                 "65"
                ]
              },
              {
@@ -646,11 +645,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "62",
-                 "75",
-                 "84",
+                 "100",
+                 "100",
                  "80",
-                 "76"
+                 "79",
+                 "79"
                ]
              }
            ]
